# django-template

./: .coveragrec  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: deploy-app.yml  test.yml  test_and_build.yml
app/apps/: urls.py
app/apps/accounts/admin/: __init__.py  users.py
app/apps/accounts/migrations/: 0001_initial.py
app/apps/accounts/models/: __init__.py
app/apps/accounts/tests/: mock_test.py
app/core/: asgi.py  settings_dev.py  wsgi.py
app/core/settings/: django.py
deployment/: deploy.sh
infrastructure/: README.md
infrastructure/aws/: .terraform.lock.hcl  alarms.tf  ecr.tf  provider.tf  rds.tf  secrets.tf  variables.tf  versions.tf  vpc.tf
infrastructure/aws/variables/: environment.tfvars  terraform.tfvars
